--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Test Vue.js</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
 	<div id="app">
@@ -24,11 +25,21 @@
 			<input type="checkbox" v-model="success">
 		</div>
 	</div>
+	<div class="card" id="song" style="width: 18rem;">
+		<img src="..." class="card-img-top" alt="...">
+		<div class="card-body">
+		   	<h5 class="card-title">{{ title }}</h5>
+		   	<p class="card-text">
+		   	 {{ artist }}</p>
+	    	<button class="btn btn-primary" v-if="!listen" @click="startListen">Ecouter</button>
+	    	<button class="btn btn-danger" v-if="stop" @click="stopListen">Arrêter</button>
+	  	</div>
+	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
 
-<!-- 1h30 apprentissage des bases de Vue.js -->
+<!-- 2h00 apprentissage des bases de Vue.js -->
 
