Ajout d'un script php contenant les données statiques des morceaux et ajout d'une fonction utilisant AJAX pour charger ces informations dans les composants VUE js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 	<div id="song">
 		<song-card 
 		v-for="song in songs"
-		v-bind:song="song"></song-card>
+		v-bind:song="song">
+		</song-card>
 	</div>
 
 
