Ajout de musiques libre de droit et clean du code

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body class="bg-secondary">
 	<header>
-		<nav class="navbar navbar-light text-light bg-dark justify-content-center ">
+		<nav class="navbar navbar-light text-light bg-dark justify-content-center">
+		<div>
 			<h1>Catalogue de musique</h1>
+			<h2>Libre de droit</h2>
+		</div>
 		</nav>
 	</header>
 	<div class="content">
